# st-vio

./: CMakeLists.txt  NOTICE  README.md
config/: dynvio_crawler_online_config.json  t265_example_vio_config.json  t265_factory_calib_crawler.json
eval_tools/: analyze_pred_dyn.py  analyze_trajectory_single.py
include/dynamics_vio/: dynamics_base.h
include/dynamics_vio/forward/: single_track_forward.h
include/dynamics_vio/io/: dataset_io_rosbag.h  dyn_vio_io.h
include/dynamics_vio/parameters/: parameters.h
include/dynamics_vio/single_track/: constraints_factor.h  single_track.h
include/dynamics_vio/utils/: se2_utils.h  utils.h
include/dynamics_vio/vio_estimator/: vio_base.h
src/: app_dynamics_vio.cpp
src/forward/: single_track_forward.cpp
src/io/: dyn_vio_io.cpp
src/parameters/: parameters.cpp
src/single_track/: constraints_factor.cpp  constraints_factor_linearizer.cpp  single_track_acado.cpp  single_track_factor.cpp  single_track_linearizer.cpp
src/utils/: utils.cpp
src/vio_estimator/: vio_base.cpp
